add compress and archive

--- a/example.env
+++ b/example.env
@@ -1,4 +1,5 @@
-LOG_DIRECTORY="/path/to/logs"
+LOGON_LOG_DIRECTORY="/path/to/logs"
+LOGON_LOG_ARCHIVES="/path/to/archives"
 MYSQL_HOSTNAME="localhost"
 MYSQL_DATABASE="dbname"
 MYSQL_USERNAME="username"
