add error checking

--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
 LOGON_LOG_DIRECTORY="/path/to/logs"
 LOGON_LOG_ARCHIVES="/path/to/archives"
+LOGON_LOG_ERRORS="/path/to/errors"
 MYSQL_HOSTNAME="localhost"
 MYSQL_DATABASE="dbname"
 MYSQL_USERNAME="username"
